refine des tables
